<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.osl.base.project.main.views.history_taking.connect_sensor.ConnectSensorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <include
            android:id="@+id/layout_progress"
            layout="@layout/layout_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="40dp"
            android:text="@string/connect_sensor_header"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_progress" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="17dp"
            android:text="@string/connect_sensor_skip"
            android:textColor="@color/color_7A7A7A"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_header" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/connect_sensor_section"
            android:textColor="@color/color_7A7A7A"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_prev"
            android:layout_width="0dp"
            android:layout_height="51dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="23dp"
            android:background="@drawable/button_radius31_191925"
            android:text="@string/connect_sensor_prev_button"
            android:textColor="@color/color_7A7A7A"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_connect"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_connect"
            android:layout_width="0dp"
            android:layout_height="51dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_radius31_5480f7"
            android:onClick="@{() -> viewModel.onSensorClick()}"
            android:text="@string/connect_sensor_button"
            android:textColor="@color/color_white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@id/btn_prev" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>